--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
     <div class="mt-4">
         <h2><b>Identitas Diri</b></h2>
-        <p>Nama: Subhan Frendy Setyawan</p>
-        <p>Alamat: Karangsalam Kidul RT04/RW04, Kec.Kedungbanteng, Kab.Banyumas</p>
-        <p>Email: subfrens@gmail.com</p>
-        <p>Telepon: 0888-0625-1237</p>
+        <p>Nama: Yakub Pratama </p>
+        <p>Alamat: Dusun 1 gelam sei serimah bandar khalipah </p>
+        <p>Email: yakubpratama121@gmail.com</p>
+        <p>Telepon: 085262814213</p>
     </div>
 
     <div class="mt-4">
         <h2><b>Pendidikan</b></h2>
         <ul>
             <li>2023 - STMIK WIDYA UTAMA - S1 TEKNIK INFORMATIKA</li>
-            <li>2020 - SMA NEGERI 3 PURWOKERTO - IPS</li>
+            <li>2020 - SMk NEGERI 1 SEI RAMPAH - TKJ </li>
         </ul>
     </div>
 
     <div class="mt-4">
         <h2><b>Pengalaman Kerja</b></h2>
         <ul>
-            <li>[Tahun] - [Posisi] di [Perusahaan]</li>
-            <li>[Tahun] - [Posisi] di [Perusahaan]</li>
+            <li>1 Tahun - CREW di PT MIDI UTAMA </li>
+            <li>6 Bulan  - F&B  di MEOTEL BY DAFFAM </li>
         </ul>
     </div>
 
