--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="mt-4">
         <h2><b>Identitas Diri</b></h2>
         <p>Nama: Yakub Pratama </p>
-        <p>Alamat: Dusun 1 gelam sei serimah bandar khalipah </p>
+        <p>Alamat: Dusun 1 Gelam Sei Serimah Bandar Khalipah </p>
         <p>Email: yakubpratama121@gmail.com</p>
         <p>Telepon: 085262814213</p>
     </div>
@@ -30,7 +30,7 @@
         <h2><b>Pendidikan</b></h2>
         <ul>
             <li>2023 - STMIK WIDYA UTAMA - S1 TEKNIK INFORMATIKA</li>
-            <li>2020 - SMk NEGERI 1 SEI RAMPAH - TKJ </li>
+            <li>2019 - SMK NEGERI 1 SEI RAMPAH - TKJ </li>
         </ul>
     </div>
 
