--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="text-center mt-5">Biodata Pribadi</h1>
 
     <div class="text-center mt-4">
-        <img src="img/Foto.png" alt="Foto Profil" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
+        <img src="FOTO PNG.1.jpeg" alt="Foto Profil" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
     </div>
 
     <div class="mt-4">
